--- a/index.html
+++ b/index.html
@@ -5,3 +5,18 @@
 layout: home
 author_profile: true
 ---
+
+#Curriculum Viate - Stacey Mmbone
+
+---
+
+## Education
+- **BSc in Information Communication Technology -  Laikipia University
+- ** Certificate in Computer Applications - Ebenezer Infor College
+
+---
+
+## Certification
+- ** i have attained several certifications https://www.credly.com/users/stacey-mmbone
+
+---
